alterando retorno da aplicacao

--- a/templates/pessoas/pessoa_list.html
+++ b/templates/pessoas/pessoa_list.html
@@ -23,7 +23,7 @@
                 <td>
                     <a href="{% url 'pessoa_update' pessoa.id %}" class="btn btn-primary">Editar</a>
                     <a href="{% url 'pessoa_delete' pessoa.id %}" class="btn btn-danger">Deletar</a>
-                    <a href="{% url 'pessoa_resumo' pessoa.id %}" class="btn btn-info">Resumo</a>  <!-- Botão Resumo -->
+                    <a href="{% url 'pessoa_resumo' pessoa.id %}" class="btn btn-info">Resumo</a>  <!-- Botão Resumo da Pessoa -->
                 </td>
             </tr>
             {% endfor %}
